test/resources/ValidPrograms/car_and_main.lo
class car() {
  int carPrice() { { return 10; } }
}

class Main() {
  int main() {
    car c;
    { c = new car(); return c.carPrice(); }
  }
}
