test/resources/InvalidPrograms/unknown_type_param.lo
class Main {
{ }
int main(UnknownType x){ return 0; }
}
